package handler

import (
	"net/http"

	"github.com/gin-gonic/gin"
	"github.com/mellivora-mind/mellivora-mind-studio/gateway/internal/config"
	"go.uber.org/zap"
)

// Handler holds all HTTP handlers
type Handler struct {
	cfg    *config.Config
	logger *zap.Logger
	// TODO: Add gRPC clients for backend services
	// accountClient  accountpb.AccountServiceClient
	// orderClient    orderpb.OrderServiceClient
	// positionClient positionpb.PositionServiceClient
	// etc.
}

// New creates a new Handler instance
func New(cfg *config.Config, logger *zap.Logger) (*Handler, error) {
	h := &Handler{
		cfg:    cfg,
		logger: logger,
	}

	// TODO: Initialize gRPC connections to backend services
	// conn, err := grpc.Dial(cfg.Services.Account, grpc.WithInsecure())
	// if err != nil {
	//     return nil, err
	// }
	// h.accountClient = accountpb.NewAccountServiceClient(conn)

	return h, nil
}

// Close closes all connections
func (h *Handler) Close() {
	// TODO: Close gRPC connections
}

// ============================================================================
// Health Endpoints
// ============================================================================

// HealthCheck returns the health status of the gateway
func (h *Handler) HealthCheck(c *gin.Context) {
	c.JSON(http.StatusOK, gin.H{
		"status":  "healthy",
		"service": "gateway",
		"version": "0.1.0",
	})
}

// ReadyCheck returns the readiness status
func (h *Handler) ReadyCheck(c *gin.Context) {
	// TODO: Check backend service connectivity
	c.JSON(http.StatusOK, gin.H{
		"status": "ready",
	})
}

// ============================================================================
// Account Endpoints
// ============================================================================

// ListAccounts handles GET /api/v1/accounts
func (h *Handler) ListAccounts(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"accounts": []gin.H{},
		"total":    0,
	})
}

// GetAccount handles GET /api/v1/accounts/:id
func (h *Handler) GetAccount(c *gin.Context) {
	id := c.Param("id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"account_id": id,
	})
}

// CreateAccount handles POST /api/v1/accounts
func (h *Handler) CreateAccount(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusCreated, gin.H{
		"message": "account created",
	})
}

// ============================================================================
// Position Endpoints
// ============================================================================

// ListPositions handles GET /api/v1/positions
func (h *Handler) ListPositions(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"positions": []gin.H{},
		"total":     0,
	})
}

// GetTargetPortfolio handles GET /api/v1/portfolios/:account_id/target
func (h *Handler) GetTargetPortfolio(c *gin.Context) {
	accountID := c.Param("account_id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"account_id": accountID,
		"weights":    []gin.H{},
	})
}

// SetTargetPortfolio handles POST /api/v1/portfolios/:account_id/target
func (h *Handler) SetTargetPortfolio(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"message": "target portfolio set",
	})
}

// GetTradeList handles GET /api/v1/portfolios/:account_id/trades
func (h *Handler) GetTradeList(c *gin.Context) {
	accountID := c.Param("account_id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"account_id": accountID,
		"buy_list":   []gin.H{},
		"sell_list":  []gin.H{},
	})
}

// ============================================================================
// Order Endpoints
// ============================================================================

// ListOrders handles GET /api/v1/orders
func (h *Handler) ListOrders(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"orders": []gin.H{},
		"total":  0,
	})
}

// GetOrder handles GET /api/v1/orders/:id
func (h *Handler) GetOrder(c *gin.Context) {
	id := c.Param("id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"order_id": id,
	})
}

// CreateOrder handles POST /api/v1/orders
func (h *Handler) CreateOrder(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusCreated, gin.H{
		"message": "order created",
	})
}

// SubmitOrder handles POST /api/v1/orders/:id/submit
func (h *Handler) SubmitOrder(c *gin.Context) {
	id := c.Param("id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"order_id": id,
		"status":   "submitted",
	})
}

// CancelOrder handles POST /api/v1/orders/:id/cancel
func (h *Handler) CancelOrder(c *gin.Context) {
	id := c.Param("id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"order_id": id,
		"status":   "cancelled",
	})
}

// ============================================================================
// Trade/Deal Endpoints
// ============================================================================

// ListDeals handles GET /api/v1/deals
func (h *Handler) ListDeals(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"deals": []gin.H{},
		"total": 0,
	})
}

// ============================================================================
// Data Endpoints
// ============================================================================

// GetQuote handles GET /api/v1/data/quotes/:code
func (h *Handler) GetQuote(c *gin.Context) {
	code := c.Param("code")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"code": code,
	})
}

// GetOHLCV handles GET /api/v1/data/ohlcv/:code
func (h *Handler) GetOHLCV(c *gin.Context) {
	code := c.Param("code")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"code": code,
		"bars": []gin.H{},
	})
}

// ============================================================================
// Risk Endpoints
// ============================================================================

// GetPortfolioRisk handles GET /api/v1/risk/portfolio/:account_id
func (h *Handler) GetPortfolioRisk(c *gin.Context) {
	accountID := c.Param("account_id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"account_id": accountID,
	})
}

// GetRiskDecomposition handles GET /api/v1/risk/decomposition/:account_id
func (h *Handler) GetRiskDecomposition(c *gin.Context) {
	accountID := c.Param("account_id")
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"account_id": accountID,
	})
}

// ============================================================================
// Signal Endpoints
// ============================================================================

// GetTimingSignal handles GET /api/v1/signals/timing
func (h *Handler) GetTimingSignal(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"signals": []gin.H{},
	})
}

// GetAlphaSignal handles GET /api/v1/signals/alpha
func (h *Handler) GetAlphaSignal(c *gin.Context) {
	// TODO: Implement with gRPC call
	c.JSON(http.StatusOK, gin.H{
		"scores": []gin.H{},
	})
}
